@@ -145,6 +145,7 @@ following names for their contribution to the product.
 * Nx.devnull
 * Nikolaos S. Karastathis
 * Olaf Lenz
+* Olivier Finlay Beaton
 * Paul Copperman
 * Paul Oranje
 * PieRRoMaN
